--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
 <body class="body">
 
+    <div class="bg-music">
+        <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+        <div class="elfsight-app-9470fd94-8492-4281-824c-81871fcefba8" data-elfsight-app-lazy></div>
+    </div>
+
     <header>
         <a href="#home" class="logo"><i class="fa-solid fa-fire-flame-curved"></i>no<span>.</span>1</a>
         <nav class="bar">
@@ -38,7 +43,7 @@
 
     <section class="home" id="home">
 
-        <video class="bg-clip" preload="auto" autoplay loop muted plays-inline>
+        <video  class="bg-clip" preload="auto" autoplay loop muted plays-inline>
             <source src="videos/bgclip.mp4" type="video/mp4">
         </video>
 
