--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
 <body class="body">
 
+    <div id="preloader"></div>
+    <div id="preloader-start">
+        <button class="start-btn">
+            <span>start plugin</span>
+        </button>
+    </div>
+
     <div class="bg-music">
         <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
         <div class="elfsight-app-9470fd94-8492-4281-824c-81871fcefba8" data-elfsight-app-lazy></div>
@@ -308,6 +315,8 @@ Vị trí sở trường của các thành viên:
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/loader.js"></script>
+    <script src="scripts/start.js"></script>
 
 </body>
 
