--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AOV Championship</title>
 
+    <link rel="shortcut icon" type="image/x-icon" href="images/fire-flame-curved-solid.svg" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="styles/style.css">
 
@@ -219,7 +220,7 @@
                         </div>
 
                         <div class="posted-day">
-                            <p>đăng ngày 10/6, 2024</p>
+                            <p>10/6, 2024</p>
                         </div>
                     </div>
 
@@ -241,7 +242,7 @@
                         </div>
 
                         <div class="posted-day">
-                            <p>đăng ngày 08/6, 2024</p>
+                            <p>08/6, 2024</p>
                         </div>
                     </div>
 
@@ -263,7 +264,7 @@
                         </div>
 
                         <div class="posted-day">
-                            <p>đăng ngày 07/6, 2024</p>
+                            <p>07/6, 2024</p>
                         </div>
                     </div>
                 </div>
