--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" type="image/x-icon" href="images/fire-flame-curved-solid.svg">
     <title>AOV Champions</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="styles/swiper-bundle.min.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
+<div class="checkDevice">
+    <h1 class="heading">lỗi khởi động</h1>
+    <h3 class="title">Chưa đủ điều kiện truy cập<span class="dot">.</span></h3>
+</div>
+
 <body>
     <div id="preloader"></div>
     <div id="preloader-start">
