--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,19 +62,19 @@
             </li>
         </ul>
 
-        <a href="" class="registerBtn">
+        <a href="#register" class="registerBtn">
             <button type="button">đăng ký</button>
         </a>
     </nav>
 
     <section class="home" id="home">
-        <video  class="bgClip" preload="auto" autoplay loop muted plays-inline>
+        <video class="bgClip" preload="auto" autoplay loop muted plays-inline>
             <source src="videos/bgClip.mp4" type="video/mp4">
         </video>
 
         <h1 class="heading">giải thi đấu liên quân fpt</h1>
         <h3 class="title">kết nối đam mê <span class="minus">-</span> chinh phục đỉnh cao<span class="dot">.</span></h3>
-        <a href="" class="registerBtn">
+        <a href="#register" class="registerBtn">
             <button type="button">đăng ký</button>
         </a>
     </section>
@@ -86,9 +87,9 @@
             <div class="paragraph">
                 <h1 class="heading">Nhóm những thành viên tích cực.</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, 
-                    adipisicing elit. Atque deleniti libero voluptate voluptatum eligendi, 
-                    et reiciendis laudantium aliquam harum vel, 
+                    Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Atque deleniti libero voluptate voluptatum eligendi,
+                    et reiciendis laudantium aliquam harum vel,
                     fugiat recusandae animi impedit commodi natus debitis omnis eos voluptatibus.
                 </p>
             </div>
@@ -249,19 +250,19 @@
             <div class="paragraph">
                 <h1 class="heading">giải đấu AOV FPT mùa 3</h1>
                 <p>
-                    Đây là nơi bạn thể hiện kỹ năng, tinh thần đồng đội và đam mê. 
-                    Hãy cháy hết mình, học hỏi và cùng nhau tạo nên những khoảnh khắc đáng nhớ. 
+                    Đây là nơi bạn thể hiện kỹ năng, tinh thần đồng đội và đam mê.
+                    Hãy cháy hết mình, học hỏi và cùng nhau tạo nên những khoảnh khắc đáng nhớ.
                     Chúng ta sẽ biến mỗi trận đấu thành một câu chuyện kỳ diệu và chinh phục mọi đỉnh cao!
-                    <br> <br>
-                    Hãy để từng pha combat là minh chứng cho sự nỗ lực không ngừng nghỉ. 
-                    Hãy cùng nhau thắp lên ngọn lửa nhiệt huyết, không ngừng tiến lên phía trước, 
-                    và biến mỗi khoảnh khắc trên chiến trường thành một kỷ niệm không thể phai mờ. 
-                    <br> <br>
-                    Đừng bao giờ quên rằng chúng ta không chỉ thi đấu vì chiến thắng, 
-                    mà còn vì niềm đam mê mãnh liệt với Liên Quân. 
-                    Hãy để ngọn lửa trong tim bạn dẫn đường, để mỗi bước di chuyển, 
-                    mỗi pha xử lý đều là một biểu hiện của khát khao chiến thắng. 
-                    Cùng nhau, chúng ta sẽ chinh phục mọi thử thách và vươn tới những đỉnh cao mới. 
+                    <br>
+                    Hãy để từng pha combat là minh chứng cho sự nỗ lực không ngừng nghỉ.
+                    Hãy cùng nhau thắp lên ngọn lửa nhiệt huyết, không ngừng tiến lên phía trước,
+                    và biến mỗi khoảnh khắc trên chiến trường thành một kỷ niệm không thể phai mờ.
+                    <br>
+                    Đừng bao giờ quên rằng chúng ta không chỉ thi đấu vì chiến thắng,
+                    mà còn vì niềm đam mê mãnh liệt với Liên Quân.
+                    Hãy để ngọn lửa trong tim bạn dẫn đường, để mỗi bước di chuyển,
+                    mỗi pha xử lý đều là một biểu hiện của khát khao chiến thắng.
+                    Cùng nhau, chúng ta sẽ chinh phục mọi thử thách và vươn tới những đỉnh cao mới.
                     Hãy đốt cháy đam mê, và để những khoảnh khắc tuyệt vời này sống mãi trong trái tim chúng ta!
                 </p>
             </div>
@@ -288,7 +289,7 @@
                                 2. Trang phục: 100% sinh viên mặc áo cam. <br>
                                 3. Trong quá trình chơi khuyến khích các đội có 4G thì sử dụng 4G. <br>
                                 4. Đọc kĩ thể lệ trước khi tham gia giải đấu. <br>
-                                5. BTC đã chốt ds nên sẽ không giải quyết bất kì trường hợp thay đổi 
+                                5. BTC đã chốt ds nên sẽ không giải quyết bất kì trường hợp thay đổi
                                 người nào tại thời điểm hiện...
                             </p>
 
@@ -308,11 +309,11 @@
                             <p class="cardDescription">
                                 Chúng tôi xin chúc mừng các bạn đã trúng giải trong mini game lần này! 🎁 <br>
                                 ✨ Con số may mắn lần lượt là: <br>
-                                    [77] - [7] - [61] <br> <br>
+                                [77] - [7] - [61] <br> <br>
                                 🥳 Danh sách người chiến thắng: <br>
                                 [Tag tên người chiến thắng 1] - 1 THẺ GARENA 100K <br>
                                 [Tag tên người chiến thắng 2] - 1 THẺ GARENA 50K <br>
-                                [Tag tên người chiến thắng 3] - 1 CHIẾC MÓC KHÓA 
+                                [Tag tên người chiến thắng 3] - 1 CHIẾC MÓC KHÓA
                             </p>
 
                             <a href="#" class="cardButton">
@@ -329,12 +330,13 @@
                         <div class="cardData">
                             <h1 class="cardName heading">hỡi CÁC KIỆN TƯỚNG</h1>
                             <p class="cardDescription">
-                                🔴 Chắc hẳn các bạn đang mong chờ về giải đấu tuyệt vời của 
-                                Liên Quân Mobile x PTCĐ FPT Polytechnic dành cho các bạn sinh viên xinh trai, đẹp gái. 
-                                Trước ngày nổ súng bắt đầu giải đấu, có một MINI GAME với những MÓN QUÀ SIÊU KHỦNG !!! <br>
+                                🔴 Chắc hẳn các bạn đang mong chờ về giải đấu tuyệt vời của
+                                Liên Quân Mobile x PTCĐ FPT Polytechnic dành cho các bạn sinh viên xinh trai, đẹp gái.
+                                Trước ngày nổ súng bắt đầu giải đấu, có một MINI GAME với những MÓN QUÀ SIÊU KHỦNG !!!
+                                <br>
                                 🔸 Thể lệ trò chơi: <br>
-                                🔰 Mỗi người comment vào bài viết này 1 con số bất kì (1-100) trong 1 lần duy nhất. 
-                                Kết quả sẽ được ghi nhận và sẽ random để tìm ra 3 con số MAY MẮN với người phần quà 
+                                🔰 Mỗi người comment vào bài viết này 1 con số bất kì (1-100) trong 1 lần duy nhất.
+                                Kết quả sẽ được ghi nhận và sẽ random để tìm ra 3 con số MAY MẮN với người phần quà
                                 tương ứng:...
                             </p>
 
@@ -357,6 +359,51 @@
         </div>
     </section>
 
+    <section class="register" id="register">
+        <h1 class="heading">đăng ký</h1>
+        <h3 class="title">Cùng tham gia ngay nào<span class="dot">.</span></h3>
+
+        <div class="container">
+            <div class="wrapper">
+                <header>Đơn đăng ký</header>
+
+                <form action="#">
+                    <div class="dblField">
+                        <div class="field">
+                            <input type="text" placeholder="Nhập tên của bạn" required>
+                            <i class="fas fa-user"></i>
+                        </div>
+
+                        <div class="field">
+                            <input type="text" placeholder="Nhập email của bạn" required>
+                            <i class="fas fa-envelope"></i>
+                        </div>
+
+                        <div class="field">
+                            <input type="text" placeholder="Nhập tên đội của bạn" required>
+                            <i class="fas fa-user-group"></i>
+                        </div>
+
+                        <div class="field">
+                            <input type="text" placeholder="Nhập sđt của bạn" required>
+                            <i class="fas fa-phone-alt"></i>
+                        </div>
+                    </div>
+
+                    <div class="message">
+                        <textarea placeholder="Đóng góp ý kiến (tùy chọn)"></textarea>
+                        <i class="fa-solid fa-comment-dots"></i>
+                    </div>
+
+                    <div class="btnArea">
+                        <button type="reset" class="submit">đăng ký</button>
+                        <span id="registered">Đăng ký thành công</span>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts/swiper-bundle.min.js"></script>
     <script src="scripts/swiper.js"></script>
@@ -367,4 +414,5 @@
     <script src="scripts/volume.js"></script>
     <script src="scripts/main.js"></script>
 </body>
+
 </html>
