--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
             <div class="paragraph">
                 <h1 class="heading">Nhóm những thành viên tích cực.</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur,
-                    adipisicing elit. Atque deleniti libero voluptate voluptatum eligendi,
-                    et reiciendis laudantium aliquam harum vel,
-                    fugiat recusandae animi impedit commodi natus debitis omnis eos voluptatibus.
+                    No1 là nhóm tổ chức phi lợi nhuận,
+                    tập hợp các thành viên tràn đầy năng lượng tích cực muốn chia sẻ cho các bạn sinh viên Poly khác.
+                    Nhóm chúng tôi thường xuyên tổ chức các giải thi đấu quy mô nhỏ trong phạm vi FPT Poly,
+                    để tạo sân chơi cho các bạn trẻ FPT và kết nối mọi người lại vs nhau.
                 </p>
             </div>
             <div class="image">
@@ -108,7 +108,7 @@
                 <div class="swiper-wrapper">
                     <article class="cardArticle swiper-slide">
                         <div class="cardImage">
-                            <img src="images/square.png" class="cardImg">
+                            <img src="images/vinh.jpg" class="cardImg">
                         </div>
 
                         <div class="cardData">
@@ -125,7 +125,7 @@
 
                     <article class="cardArticle swiper-slide">
                         <div class="cardImage">
-                            <img src="images/square.png" class="cardImg">
+                            <img src="images/nghia.jpg" class="cardImg">
                         </div>
 
                         <div class="cardData">
@@ -142,7 +142,7 @@
 
                     <article class="cardArticle swiper-slide">
                         <div class="cardImage">
-                            <img src="images/square.png" class="cardImg">
+                            <img src="images/thanh.jpg" class="cardImg">
                         </div>
 
                         <div class="cardData">
@@ -176,7 +176,7 @@
 
                     <article class="cardArticle swiper-slide">
                         <div class="cardImage">
-                            <img src="images/square.png" class="cardImg">
+                            <img src="images/dahy.jpg" class="cardImg">
                         </div>
 
                         <div class="cardData">
@@ -193,7 +193,7 @@
 
                     <article class="cardArticle swiper-slide">
                         <div class="cardImage">
-                            <img src="images/square.png" class="cardImg">
+                            <img src="images/tnghia.jpg" class="cardImg">
                         </div>
 
                         <div class="cardData">
@@ -210,7 +210,7 @@
 
                     <article class="cardArticle swiper-slide">
                         <div class="cardImage">
-                            <img src="images/square.png" class="cardImg">
+                            <img src="images/phat.jpg" class="cardImg">
                         </div>
 
                         <div class="cardData">
