--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                     <article class="cardArticle swiper-slide">
                         <div class="cardImage">
-                            <img src="images/square.png" class="cardImg">
+                            <img src="images/bm.jpg" class="cardImg">
                         </div>
 
                         <div class="cardData">
