--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </p>
             </div>
             <div class="image">
-                <img src="images/team.jfif" alt="">
+                <img src="images/team.jpg" alt="">
             </div>
         </div>
     </section>
